--- a/styles.css
+++ b/styles.css
@@ -11,12 +11,56 @@ html {
 
 body {
   color: #fca311;
+  background-color: #131112;
 }
+
+/*!! Navigation */
+
+.nav-header {
+  height: 6rem;
+  border-bottom: 1px solid #333;
+  box-shadow: 3px 3px 3px #333;
+}
+
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav-header-icon {
+  width: 5rem;
+  height: 5rem;
+  padding: 1rem 0rem 0rem 1rem;
+}
+
+.nav-header-links {
+  list-style: none;
+  display: flex;
+  gap: 2rem;
+  padding: 1.5rem 1.5rem 0rem 0rem;
+}
+
+.nav-header-link {
+  font-size: 2rem;
+  list-style: none;
+  background-color: #5a5758;
+  padding: 0.5rem 1.3rem;
+  border-radius: 2rem;
+}
+
+.nav-header-link:visited,
+.nav-header-link:link,
+.nav-header-link:hover,
+.nav-header-link:active {
+  text-decoration: none;
+  color: #fca311;
+}
+
+/*!! Page */
 
 .container {
   display: flex;
   flex-direction: column;
-  background-color: #131112;
   width: 100vw;
   height: 100vh;
   align-items: center;
@@ -25,12 +69,12 @@ body {
 
 /** Nav Bar items */
 
-.nav-bar {
+.nav-title {
   padding: 1rem 0rem;
   text-align: center;
 }
 
-.nav-header {
+.nav-header-title {
   font-size: 4rem;
 }
 
@@ -106,4 +150,39 @@ body {
 
 .footer {
   font-size: 2rem;
+}
+
+/*!! Form */
+
+.subscribe-form {
+  background-color: #14213d;
+  padding: 3rem;
+  border-radius: 2rem;
+  font-size: 1.7rem;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0.2rem 0.2rem 0.5rem #444;
+}
+
+.form-item {
+  display: flex;
+  margin-bottom: 0.6rem;
+}
+
+.form-input-text {
+  width: 100%;
+}
+
+.disclaimer {
+  margin-top: 0.6rem;
+  margin-bottom: 0.6rem;
+}
+
+.form-submit-btn {
+  margin-top: 1rem;
+  padding: 1.2rem 2.4rem;
+  background-color: #131112;
+  border: none;
+  color: #fca311;
+  border-radius: 1rem;
 }
